style.css
/* ... */
#sm-banner .banner-box:hover button {
  background: #d5241b;
  border: 1px solid #b61b13;
}

#banner3 {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding: 0 80px;
}

#banner3 .banner-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  background-image: url("img/k-tote2.jpg");
  height: 30vh;
  min-width: 30%;
  background-size: cover;
  background-position: center;
  padding: 20px;
  margin-bottom: 20px;
  cursor: pointer;
}

#banner3 h2 {
  color: #1a1a1a;
  font-size: 22px;
  font-weight: 900;
}

#banner3 h3 {
  color: #d5241b;
  font-size: 15px;
  font-weight: 900;
}

#banner3 .banner-box2 {
  background-image: url("img/k-badge-banner.jpg");
}

#banner3 .banner-box3 {
  background-image: url("img/k-bookmark-banner2.jpg");
}

#banner3 .banner-box4 {
  background-image: url("img/tshirt-banner.jpg");
}

#newsletter {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
  background-image: url("img/newsletter.png");
  background-repeat: no-repeat;
  background-position: 20% 30%;
  background-color: #041e42;
}

#newsletter h4 {
  font-size: 22px;
  font-weight: 700;
  color: #fff;
}

#newsletter p {
  font-size: 14px;
  font-weight: 600;
  color: #818ea0;
}

#newsletter p span {
  color: #ffbd27;
}

#newsletter .form {
  display: flex;
  width: 40%;
}

#newsletter input {
  height: 3.125rem;
  padding: 0 1.25em;
  font-size: 14px;
  width: 100%;
  border: 1px solid transparent;
  border-radius: 4px;
  outline: none;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

button.normal {
  font-size: 14px;
  font-weight: 600;
  padding: 15px 30px;
  color: #000;
  background-color: #fff;
  border-radius: 4px;
  cursor: pointer;
  border: none;
  outline: none;
  transition: 0.2s;
}

#newsletter button {
  background-color: #d5241b;
  color: #fff;
  white-space: nowrap;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

footer {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

footer .col {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-bottom: 20px;
}

footer .logo {
  margin-bottom: 30px;
}

footer h4 {
  font-size: 14px;
  padding-bottom: 20px;
}

footer p {
  font-size: 13px;
  margin: 0 0 8px 0;
}

footer a {
  font-size: 13px;
  text-decoration: none;
  color: #222;
  margin: 0 0 12px 0;
}

footer .follow {
  margin-top: 20px;
}

footer .follow i {
  color: #465b52;
  padding-right: 4px;
  cursor: pointer;
}

footer .follow i:hover,
footer a:hover {
  color: #b61b13;
}

footer .copyright {
  text-align: center;
  width: 100%;
}

/* about.html */
.about-page {
  background-image: url("img/about.png");
}

#form-details form {
  width: 65%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

#about-head {
  display: grid;
  grid-template-columns: 1fr 1.5fr;
  align-items: center;
  gap: 60px;
}

.about-images {
  display: flex;
  gap: 20px;
}

.about-images img {
  width: 200px;
  height: 300px;
  object-fit: cover;
  border-radius: 12px;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s;
}

.about-images img:hover {
  transform: translateY(-5px);
}

.about-text h2 {
  font-size: 48px;
  margin-bottom: 15px;
}

.about-text p {
  max-width: 600px;
  line-height: 1.7;
  color: #555;
  font-size: 16px;
}
/* 
.about-images img:nth-child(2) {
  margin-top: 30px;
}

.about-images img:nth-child(3) {
  margin-top: 60px;
} */

/* shop.html */

#page-header {
  margin-top: 90px; /* fixed navbar */
  width: 100%;
  height: 40vh;
  background-size: cover;
  display: flex;
  justify-content: center;
  text-align: center;
  flex-direction: column;
  padding: 14px;
}

.shop-page {
  background-image: url("img/shop-b1.jpg");
}

#page-header h2,
#page-header p {
  color: #fff;
}

/* single product */

#prodetails {
  display: flex;
  margin-top: 80px;
}

#prodetails .single-pro-image {
  width: 35%;
  margin-right: 50px;
  cursor: pointer;
}

#main-img {
  border: 1px solid #cce7d0;
}

.small-img {
  border: 1px solid #cce7d0;
}

.small-img-group {
  display: flex;
  justify-content: space-between;
}

.small-img-col {
  flex-basis: 24%;
  cursor: pointer;
}

#prodetails .single-pro-details {
  width: 45%;
}

#prodetails .single-pro-details h4 {
  padding: 40px 0 20px 0;
}

#prodetails .single-pro-details h2 {
  font-size: 26px;
}

#prodetails .single-pro-details select {
  display: block;
  padding: 5px 10px;
  margin-bottom: 10px;
}

#prodetails .single-pro-details input {
  height: 47px;
  width: 50px;
  padding-left: 10px;
  font-size: 16px;
  margin-right: 10px;
}

#prodetails .single-pro-details input:focus {
  outline: none;
}

#prodetails .single-pro-details button {
  background: #d5241b;
  color: #fff;
}

#prodetails .single-pro-details span {
  line-height: 25px;
}

#product-colour {
  margin-top: 30px;
}

/* contact.html */
.contact-page {
  background-image: url("img/contact.jpg");
}

#form-details {
  display: flex;
  justify-content: space-between;
  margin: 30px;
  padding: 80px;
  border: 1px solid #e1e1e1;
}

#form-details form {
  width: 65%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

#form-details form span {
  font-size: 12px;
}

#form-details form h2 {
  font-size: 26px;
  line-height: 35px;
  padding: 20px 0;
}

#form-details form input,
#form-details form textarea {
  width: 100%;
  padding: 12px 15px;
  margin-bottom: 20px;
  outline: none;
  border: 1px solid #e1e1e1;
}

#form-details form button {
  background-color: #d5241b;
  color: #fff;
}

#form-details .people div {
  padding-bottom: 25px;
  display: flex;
  align-items: flex-start;
}

#form-details .people div img {
  width: 65px;
  height: 65px;
  object-fit: cover;
  border: 1px solid #818ea0;
  margin-right: 15px;
  border-radius: 50%;
}

#form-details .people div p {
  margin: 0;
  font-size: 13px;
  line-height: 25px;
}
/* ... */

